creating a book object

--- a/index.html
+++ b/index.html
@@ -9,6 +9,25 @@
   </head>
   <body>
     <h1>BOOKS!!</h1>
+    <main class="main-wrapper">
+      <form action="">
+        <div class="input-wrapper">
+          <label for="title">Book Title:</label>
+          <input id="title" type="text" placeholder="Book Title" />
+        </div>
+        <div class="input-wrapper">
+          <label for="author">Author:</label>
+          <input id="author" type="text" placeholder="Stephen King" />
+        </div>
+        <div class="input-wrapper">
+          <label for="pages">Page Count:</label>
+          <input id="pages" type="text" placeholder="100" />
+        </div>
+        <div class="button-wrapper">
+          <button id="addToLibrary" class="submit">Add to Library</button>
+        </div>
+      </form>
+    </main>
     <script src="script.js"></script>
   </body>
 </html>
